[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Test.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player (2).tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ladder.tscn" type="PackedScene" id=3]
[ext_resource path="res://Graphics/Tileset/Test.tres" type="TileSet" id=4]
[ext_resource path="res://Scenes/Collectible.tscn" type="PackedScene" id=5]
[ext_resource path="res://Graphics/Particles/Fog.tscn" type="PackedScene" id=6]
[ext_resource path="res://Graphics/Particles/Particles.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/MovingPlatfrom.tscn" type="PackedScene" id=8]


[sub_resource type="Animation" id=1]
resource_name = "Death"

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 648.544, 136.434 )
run_speed = 150.0
sprint_speed = 200.0
crawl_speed = 50.0
climb_speed = 50.0
jump_speed = -250.0
wall_jump_speed = -200.0

[node name="Ladder" parent="." instance=ExtResource( 3 )]

[node name="Ground" type="TileMap" parent="."]
scale = Vector2( 0.02, 0.02 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 588, 588 )
format = 1
tile_data = PoolIntArray( 196670, 0, 0, 262159, 0, 0, 262206, 0, 0, 327695, 0, 0, 327742, 0, 0, 393231, 0, 0, 393278, 0, 0, 458767, 0, 0, 458814, 0, 0, 524303, 0, 0, 524344, 0, 0, 524345, 0, 0, 524350, 0, 0, 589839, 0, 0, 589886, 0, 0, 655375, 0, 0, 655405, 0, 0, 655406, 0, 0, 655407, 0, 0, 655408, 0, 0, 655409, 0, 0, 655410, 0, 0, 655411, 0, 0, 655422, 0, 0, 720911, 0, 0, 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 720932, 0, 0, 720958, 0, 0, 786447, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 786494, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 852004, 0, 0, 852005, 0, 0, 852006, 0, 0, 852007, 0, 0, 852008, 0, 0, 852009, 0, 0, 852010, 0, 0, 852011, 0, 0, 852012, 0, 0, 852013, 0, 0, 852014, 0, 0, 852015, 0, 0, 852016, 0, 0, 852017, 0, 0, 852018, 0, 0, 852019, 0, 0, 852020, 0, 0, 852021, 0, 0, 852022, 0, 0, 852023, 0, 0, 852024, 0, 0, 852025, 0, 0, 852026, 0, 0, 852027, 0, 0, 852028, 0, 0, 852029, 0, 0, 852030, 0, 0 )

[node name="Collectibles" type="Node2D" parent="."]

[node name="Collectible1" parent="Collectibles" instance=ExtResource( 5 )]
position = Vector2( 706.762, 131.059 )
upgrade_id = 1

[node name="Collectible2" parent="Collectibles" instance=ExtResource( 5 )]
position = Vector2( 627.036, 130.582 )
upgrade_id = 2

[node name="Collectible3" parent="Collectibles" instance=ExtResource( 5 )]
position = Vector2( 213.421, 136.151 )
upgrade_id = 3

[node name="Collectible4" parent="Collectibles" instance=ExtResource( 5 )]
position = Vector2( 565.808, 140.846 )
upgrade_id = 4

[node name="Collectible5" parent="Collectibles" instance=ExtResource( 5 )]
position = Vector2( 389.625, -34.9517 )
upgrade_id = 5

[node name="Collectible6" parent="Collectibles" instance=ExtResource( 5 )]
position = Vector2( 414.492, -35.0864 )
upgrade_id = 6

[node name="Collectible7" parent="Collectibles" instance=ExtResource( 5 )]
position = Vector2( 443.052, -34.4509 )
upgrade_id = 7

[node name="Collectible8" parent="Collectibles" instance=ExtResource( 5 )]
position = Vector2( 467.935, -34.6741 )
upgrade_id = 8

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 281.2, 78.85 )

[node name="LevelUpgradeAnim" type="AnimationPlayer" parent="."]

[node name="GameAnim" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 1 )

[node name="Fog" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( -151.378, -432.803 )
scale = Vector2( 1.96, 1.96 )

[node name="Particles" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 246.263, 87.9605 )

[node name="Particles2" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 440, 87.9605 )

[node name="Particles3" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 635.506, 87.9605 )

[node name="MovingPlatfrom" parent="." instance=ExtResource( 8 )]
position = Vector2( 267.957, 68.1371 )
wait_time = 1

[node name="Start" parent="MovingPlatfrom/Pos" index="0"]
position = Vector2( 319.5, 103.956 )

[node name="End" parent="MovingPlatfrom/Pos" index="1"]
position = Vector2( 215.827, 104.704 )
[connection signal="dead" from="Player" to="." method="player_death"]
[connection signal="upgrade_player" from="Collectibles/Collectible1" to="." method="upgrade_game"]
[connection signal="upgrade_player" from="Collectibles/Collectible2" to="." method="upgrade_game"]
[connection signal="upgrade_player" from="Collectibles/Collectible3" to="." method="upgrade_game"]
[connection signal="upgrade_player" from="Collectibles/Collectible4" to="." method="upgrade_game"]
[connection signal="upgrade_player" from="Collectibles/Collectible5" to="." method="upgrade_game"]
[connection signal="upgrade_player" from="Collectibles/Collectible6" to="." method="upgrade_game"]
[connection signal="upgrade_player" from="Collectibles/Collectible7" to="." method="upgrade_game"]
[connection signal="upgrade_player" from="Collectibles/Collectible8" to="." method="upgrade_game"]

[editable path="MovingPlatfrom"]
